--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   }
 }
